mrt_ws_new/log/build_2024-01-04_21-12-34/rishith_assn_2/stderr.log
  File "/home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2/setup.py", line 17
    ],
    ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '(' on line 16

